--- a/package.json
+++ b/package.json
@@ -9,9 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@lexical/react": "^0.29.0",
+    "@lexical/rich-text": "^0.29.0",
+    "@radix-ui/react-toggle": "^1.1.2",
+    "@radix-ui/react-tooltip": "^1.1.8",
+    "@tiptap/extension-highlight": "^2.11.5",
+    "@tiptap/extension-text-align": "^2.11.5",
+    "@tiptap/pm": "^2.11.5",
+    "@tiptap/react": "^2.11.5",
+    "@tiptap/starter-kit": "^2.11.5",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lexical": "^0.29.0",
+    "lucide-react": "^0.483.0",
+    "next": "15.2.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.2.3"
+    "react-icons": "^5.5.0",
+    "recharts": "^2.15.1",
+    "sass": "^1.86.0",
+    "tailwind-merge": "^3.0.2",
+    "tw-animate-css": "^1.2.4"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
